--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
-        </div>
+        </div>-->
         <ul class="nav-links">
             <li><a href="#intro">Introdução</a></li>
             <li><a href="#videos">Vídeos</a></li>
             <li><a href="#dictionary">Dicionário</a></li>
             <li><a href="#about-us">Quem somos</a></li>
-        </ul> -->
+        </ul> 
 
     </nav>
 
