--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css" type="text/css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Dicionario</title>
 </head>
 <body>
 
     <nav>
         
-        <!-- <div class="hamburger">
+        <div class="hamburger" id="hamburgerID">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
-        </div> -->
+        </div>
         
         <ul class="nav-links">
             <li><a href="#intro">Introdução</a></li>
@@ -52,7 +53,7 @@
             </section>
         </div>
 
-        <div class="red-background">
+        <div class="red-background" id="videos">
             <div class="container-red">
                 <section class="videos">
                     <h1>Vídeos</h1>
@@ -64,7 +65,7 @@
 
 
 
-        <div class="container">
+        <div class="container" id="dictionary">
             <section class="dicionario">
                 <h1>Dicionário</h1>
                 <iframe  frameborder="0" src="dicionario.pdf"></iframe>
